// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Summary tests on Web should render an ArticleSummaryContent component with a AST 1`] = `
<div
  dir="auto"
  style={
    Object {
      "WebkitBoxLines": "multiple",
      "WebkitFlexWrap": "wrap",
      "flexWrap": "wrap",
      "fontFamily": "TimesDigitalW04",
      "lineHeight": "20px",
      "marginBottom": "10px",
      "msFlexWrap": "wrap",
    }
  }
>
  <span
    dir="auto"
  >
    
    Victoria
    ...
  </span>
</div>
`;

exports[`Article Summary tests on Web should render an ArticleSummaryContent component with a blank AST 1`] = `null`;

exports[`Article Summary tests on Web should render an ArticleSummaryContent component with two paragraphs 1`] = `
<div
  dir="auto"
  style={
    Object {
      "WebkitBoxLines": "multiple",
      "WebkitFlexWrap": "wrap",
      "flexWrap": "wrap",
      "fontFamily": "TimesDigitalW04",
      "lineHeight": "20px",
      "marginBottom": "10px",
      "msFlexWrap": "wrap",
    }
  }
>
  <span
    dir="auto"
  >
    
    The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
  </span>
  <span
    dir="auto"
  >
     
    Mali sniffed out explosives and insurgents during a gunfight that lasted seven and a half hours to help a team of Special Boat Service (SBS) operators hunt down and kill more than a dozen.
    ...
  </span>
</div>
`;

exports[`Article Summary tests on Web should render an ArticleSummaryHeadline component with a blank AST 1`] = `
<h3
  aria-level="3"
  dir="auto"
  role="heading"
  style={
    Object {
      "color": "rgba(51,51,51,1)",
      "fontFamily": "TimesModern-Bold",
      "fontSize": "22px",
      "fontWeight": "400",
      "lineHeight": "22px",
      "marginBottom": "5px",
    }
  }
>
  Example headline
</h3>
`;

exports[`Article Summary tests on Web should render an article-summary component containing links 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(51,51,51,1)",
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      FRANCIS ELLIOTT
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Sajid Javid to end hostile era for illegal immigrants
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      <span
        dir="auto"
      >
        Sajid Javid
      </span>
       has warned the Home Office to expect an overhaul after the 
      <span
        dir="auto"
      >
        Windrush scandal
      </span>
       as he ditches the policy of creating a “hostile
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with a single paragraph 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(51,51,51,1)",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": "13px",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": "13px",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <span
      dir="auto"
    >
      Camilla Long
    </span>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with a video label 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "alignItems": "center",
          "msFlexAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "paddingBottom": "2px",
          }
        }
      >
        <svg
          height={8}
          style={Object {}}
          viewBox="0.15463916957378387 0.049614034593105316 23.59917640686035 13.728596687316895"
          width={13.76}
        >
          <rect
            fill="#333333"
            height="13.5721404"
            style={Object {}}
            width="15.4550103"
            x="0.154639175"
            y="0.139754386"
          />
          <polygon
            fill="#333333"
            points="16.3405361 4.14989474 16.3405361 9.66442105 22.0216082 12.8146667 22.0216082 0.999894737"
            style={Object {}}
          />
          <polygon
            fill="#333333"
            points="23.7538144 0.0496140351 22.7616495 0.643508772 22.7616495 13.1902105 23.7538144 13.7782105"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        dir="auto"
        style={
          Object {
            "color": "rgba(51,51,51,1)",
            "fontSize": "12px",
            "fontWeight": "400",
            "letterSpacing": "1.2px",
            "lineHeight": "12px",
            "marginLeft": "5px",
            "top": "2px",
          }
        }
      >
        CAMILLA LONG
      </div>
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <span
      dir="auto"
    >
      Camilla Long
    </span>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with content including line breaks 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(51,51,51,1)",
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      <strong>
        Victoria
      </strong>
      <br />
       ITV
      <br />
      ★★★★☆
    </span>
    <span
      dir="auto"
    >
       
      <strong>
        Lucy Worsley’s Nights at the Opera
      </strong>
      <br />
       BBC Two
      <br />
      ★★★☆☆
    </span>
    <span
      dir="auto"
    >
       
      Poor old Harriet, Duchess of Sutherland. There she was giddily expecting a
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <span
      dir="auto"
    >
      Camilla Long
    </span>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with empty content at the end trimmed 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(51,51,51,1)",
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.
    </span>
    <span
      dir="auto"
    >
       
      The former punk
    </span>
    <span
      dir="auto"
    >
       
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <span
      dir="auto"
    >
      Camilla Long
    </span>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with headline and blank content 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(51,51,51,1)",
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </h3>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with headline and no content 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(51,51,51,1)",
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </h3>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with multiple paragraphs 1`] = `
<div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
    </span>
    <span
      dir="auto"
    >
       
      Mali sniffed out explosives and insurgents during a gunfight that lasted seven and a half hours to help a team of Special Boat Service (SBS) operators hunt down and kill more than a dozen
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <span
      dir="auto"
    >
      Camilla Long
    </span>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with no byline 1`] = `
<div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with no date publication 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(51,51,51,1)",
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <span
      dir="auto"
    >
      Camilla Long
    </span>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with no headline 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(51,51,51,1)",
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with no label 1`] = `
<div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <span
      dir="auto"
    >
      Camilla Long
    </span>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary with opinion byline 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "5px",
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(51,51,51,1)",
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(133,0,41,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
      }
    }
  >
    <span
      dir="auto"
    >
      Camilla Long
    </span>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "color": "rgba(51,51,51,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
</div>
`;
